--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,13 +5,20 @@
   "description": "This extension will be used for code analysis ONLY",
   "version": "0.0",
 
-  "browser_action": {
-    "default_icon": "test_icon.png",
+  "page_action": {
+    "default_icon": {
+     "19":  "test_icon.png",
+     "38":  "test_icon.png"
+  },
     "default_popup": "exposit.html",
     "default_title": "Exposit"
   },
 
   "permissions": [
+    "https://*.google.com/",
+    "https://*google.com/*",
+    "http://*google.com/",
+    "http://*google.com/*",
     "activeTab",
     "https://ajax.googleapis.com/"
   ]
